--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,26 @@
 
     <groupId>com.example</groupId>
     <artifactId>spring-developer</artifactId>
+    <packaging>pom</packaging>
     <version>0.1</version>
+
+    <modules>
+        <module>spring-boot-magic</module>
+    </modules>
+
+    <properties>
+
+        <!-- java version -->
+        <java.version>1.8</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+
+        <!-- project files encoding -->
+        <project.encoding>UTF-8</project.encoding>
+        <project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
+
+    </properties>
 
     <dependencyManagement>
         <dependencies>
