--- a/spring-boot-magic/pom.xml
+++ b/spring-boot-magic/pom.xml
@@ -20,11 +20,19 @@
 
     <dependencyManagement>
         <dependencies>
+
             <dependency>
                 <groupId>com.example</groupId>
                 <artifactId>hello-service</artifactId>
                 <version>${project.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.example</groupId>
+                <artifactId>hello-starter</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
