Improve auto-configuration with conditions

--- a/spring-boot-magic/hello-starter/pom.xml
+++ b/spring-boot-magic/hello-starter/pom.xml
@@ -21,6 +21,7 @@
         <dependency>
             <groupId>com.example</groupId>
             <artifactId>hello-service</artifactId>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
