--- a/spring-boot-magic/hello-app/pom.xml
+++ b/spring-boot-magic/hello-app/pom.xml
@@ -20,6 +20,11 @@
 
         <dependency>
             <groupId>com.example</groupId>
+            <artifactId>hello-service</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.example</groupId>
             <artifactId>hello-starter</artifactId>
         </dependency>
 
